# tensor_field_nav

./: README.md
octomap_server/: CMakeLists.txt  package.xml
octomap_server/cfg/: OctomapServer.cfg~
octomap_server/include/octomap_server/: MyOcTree.h  OctomapServer.h
octomap_server/launch/: octomap_mapping.launch~
octomap_server/src/: MyOcTree.cpp  OctomapServer.cpp
octomap_tensor_field/: CHANGELOG.rst  CMakeLists.txt  package.xml
octomap_tensor_field/include/octomap_tensor_field/: OctomapServer.h
octomap_tensor_field/launch/: octomap_mapping.launch
octomap_tensor_field/msg/: FrontierPoints.msg
octomap_tensor_field/src/: MyOcTree.cpp  OctomapServer.cpp  octomap_server_node.cpp
odom_tf_publish/: CHANGELOG.rst  CMakeLists.txt  package.xml
odom_tf_publish/src/: tf_broadcaster.cpp~
pure_pursuit_controller/: CHANGELOG.rst  CMakeLists.txt  package.xml
pure_pursuit_controller/include/pure_pursuit_controller/: cancelPath.h  cancelPathRequest.h  cancelPathResponse.h  cutPath.h  cutPathRequest.h  cutPathResponse.h  executePath.h  executePathRequest.h  executePathResponse.h  purePursuitController.h  recoverPath.h  recoverPathRequest.h  recoverPathResponse.h
pure_pursuit_controller/launch/: pure_pursuit_controller.launch
pure_pursuit_controller/src/: purePursuitController.cpp  pure_pursuit_controller_node.cpp
pure_pursuit_controller/srv/: cancelPath.srv  cutPath.srv  executePath.srv  recoverPath.srv
rviz_textured_quads/: CHANGELOG.rst  CMakeLists.txt  mesh_display_custom_plugin_description.xml  package.xml
rviz_textured_quads/config/: rviz_textured_quads.rviz
rviz_textured_quads/include/rviz_textured_quads/: TexturedQuad.h  TexturedQuadArray.h
rviz_textured_quads/launch/: demo.launch
rviz_textured_quads/msg/: TexturedQuad.msg  TexturedQuadArray.msg
rviz_textured_quads/src/: mesh_display_custom.cpp  mesh_display_custom.h  plugin_init.cpp  text_node.h
rviz_textured_quads/tests/: display_images_test.py
tensor_field_nav_core/: CHANGELOG.rst  CMakeLists.txt  package.xml
tensor_field_nav_core/conf/: tensor_field_nav_core.yaml~
tensor_field_nav_core/include/tensor_field_nav_core/: CalPathInfoGain.h  EvenStreamlinePlace.h  EvenStreamlinePlace_.h  KeyFrameList.h  Numerical.h  ParaThread.h  Parameters.h  QuadMesh.h  ScalarSingularElemList.h  TfCore.h  Trajectory.h  TrajectoryList.h  Util.h  VertTimeList.h  dataStructure.h  graph.h  icMatrix.h  icVector.h  mst.h  nr.h  nrtypes_nr.h  nrutil.h  nrutil_nr.h
tensor_field_nav_core/launch/: complete_run.launch~  empty_world.launch  turtlebot_simulation.launch  turtlebot_simulation.launch~
tensor_field_nav_core/robots/turtlebot/: create_circles_asus_xtion_pro.urdf.xacro~  kobuki_hexagons_asus_xtion_pro.urdf.xacro  kobuki_hexagons_asus_xtion_pro_offset.urdf.xacro  kobuki_hexagons_kinect.urdf.xacro  kobuki_hexagons_kinect.urdf.xacro~  roomba_circles_asus_xtion_pro.urdf.xacro  roomba_circles_kinect.urdf.xacro~
tensor_field_nav_core/robots/turtlebot/includes/: create.launch.xml  kobuki.launch.xml
tensor_field_nav_core/rviz/: tf_rviz.rviz
tensor_field_nav_core/scripts/: listen.py
tensor_field_nav_core/src/: CalPathInfoGain.cu  EvenStreamlinePlace.cpp  EvenStreamlinePlace_.cpp  KeyFrameList.cpp  Numerical.cpp  ParaThread.cpp  QuadMesh.cpp  TfCore.cpp  TfCore_node.cpp  Trajectory.cpp  TrajectoryList.cpp  Util.cpp  VertTimeList.cpp
tensor_field_nav_core/world/: scene.world
