<package>
  <name>octomap_tensor_field</name>
  <version>0.0.1</version>
  <description>
    octomap_tensor_field derives frome octomap_server package, and only makes some change for tensor field navigation. It loads a 3D map (as Octree-based OctoMap) and distributes it to other nodes in a compact binary format.
    It also allows to incrementally build 3D OctoMaps.
    Note:the author of octomap_server package is Armin Hornung and this package is almost same with octomap_server. We rename it as octomap_server_field for avoiding duplication.
  </description>
  <author>Lintao Zheng</author>
  <maintainer email="lintaozheng1991@gmail.com">Lintao Zheng</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/zlt1991/tensor_field_nav/octomap_tensor_field</url>
  
  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>octomap</build_depend>
  <build_depend>octomap_msgs</build_depend>  
  <build_depend>octomap_ros</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>message_generation</build_depend>

 <run_depend>roscpp</run_depend>
 <run_depend>visualization_msgs</run_depend>
 <run_depend>sensor_msgs</run_depend>
 <run_depend>pcl_ros</run_depend>
 <run_depend>pcl_conversions</run_depend>
 <run_depend>nav_msgs</run_depend>
 <run_depend>std_msgs</run_depend>
 <run_depend>std_srvs</run_depend>
 <run_depend>octomap</run_depend>
 <run_depend>octomap_msgs</run_depend>
 <run_depend>octomap_ros</run_depend>
 <run_depend>dynamic_reconfigure</run_depend>
 <run_depend>nodelet</run_depend>
 <run_depend>libpcl-all</run_depend>
 <run_depend>message_runtime</run_depend>


 
</package>


